<resources>
    <string name="app_name">ThoughtFlow</string>
    <string name="welcome_to_servey">Welcome To ThoughtFlow</string>
    <string name="dummy_text">Lohrn Pommy is duumy text to show the layout of screen design</string>
    <string name="login_now">Login Now</string>
    <string name="create_account">Create Account</string>
    <string name="keep_connected">Keep Connected</string>
    <string name="entermailaddress">Enter email address and password to get access your account</string>
    <string name="rememberme">Rember Me</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="get_login">Get Login</string>
    <string name="orsigninwith">OR</string>
    <string name="nav_item_home">Home</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="nav_openservylist">Open ThoughtFlow List</string>
    <string name="nav_postquestion">Post A Question</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_response">Response</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_logout">Logout</string>
    <string name="enterquestion">Enter a Question</string>
    <string name="uploadaudiofile">Upload Audio File</string>
    <string name="browsefile">Browse File</string>
    <string name="youtubefile">YouTube/Vimeo Link</string>
    <string name="choices">Choices</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="settimelimit">Set Time Limit</string>
    <string name="set_location">Set Location</string>
    <string name="manage_notifiation">Manage Notification</string>
    <string name="my_response">My Response</string>
    <string name="my_posted_question">My Posted Question</string>
    <string name="manage_my_profile">Manage My Profile</string>
    <string name="faq">Faq</string>
    <string name="share_app_with_friend">Share App With Friends</string>
    <string name="tandc"><![CDATA[T&C]]></string>
    <string name="tandc1"><![CDATA[T&C]]></string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="app_info">App Info</string>
    <string name="contact_suport">Contact Support</string>
    <string name="ok">ok</string>
    <string name="nav_resetdata">Reset Data</string>
    <string name="emailerror">Please enter email</string>
    <string name="passworderror">Please enter password</string>
    <string name="typeerror">Please enter type</string>
    <string name="submit">Submit</string>
</resources>
