<?xml version="1.0" encoding="utf-8"?>
<layout >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/splashbg"
        tools:context="servy.pcube.SplashActivity">

        <LinearLayout
            android:layout_centerInParent="true"
            android:id="@+id/ll_top"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_marginTop="40dp"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:src="@drawable/splash_icon"/>



        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/ll_top"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_servey"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textColor="@color/black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="200dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/login_now"
                android:layout_height="40dp"
                android:background="@drawable/blue_button"/>

            <Button
                android:id="@+id/btn_createaccount"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/create_account"
                android:layout_height="40dp"
                android:background="@color/white">

            </Button>
        </LinearLayout>
    </RelativeLayout>

</layout>