<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:src="@drawable/arrow_left"/>

                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/keep_connected"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/entermailaddress"
                            android:textColor="@color/black"

                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_marginTop="60dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:paddingLeft="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/etbg">
                            <ImageView
                                android:id="@+id/iv_email"
                                android:layout_centerVertical="true"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:visibility="invisible"
                                android:src="@drawable/email"/>

                            <android.support.design.widget.TextInputLayout
                                android:layout_marginLeft="10dp"
                                android:layout_toRightOf="@+id/iv_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/etOtp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:singleLine="true"
                                    android:inputType="number"
                                    android:hint="Enter otp"
                                    android:textSize="14sp"/>
                            </android.support.design.widget.TextInputLayout>
                        </RelativeLayout>







                        <Button
                            android:id="@+id/btnSubmit"
                            android:layout_marginBottom="10dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_width="200dp"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textAllCaps="false"
                            android:text="@string/submit"
                            android:layout_height="40dp"
                            android:background="@drawable/blue_button">
                        </Button>



                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</layout>